--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/sennahLessert/mvtExample#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "jade": "^1.11.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "pug": "^2.0.0-rc.4"
   }
 }
