--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "little example how to use vector tiles with openlayers, postrges and postgis",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
